drop own Function+Factory+Consumer - do not provide import duplicates